care-australia-uat/force-app/main/default/objects/Donor_Constituency__c/Donor_Constituency__c.object-meta.xml
<CustomObject>
    <label>Donor Constituency</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Donor Constituency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donor Constituencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>