care-australia-uat/force-app/main/default/objects/Donor_Constituency__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Donor Constituencies</relationshipLabel>
    <relationshipName>Donor_Constituencies</relationshipName>
    <type>Lookup</type>
</CustomField>