care-australia-uat/force-app/main/default/objects/Donor_Constituency__c/fields/Constituency_Type__c.field-meta.xml
<CustomField>
    <fullName>Constituency_Type__c</fullName>
    <label>Constituency Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CARE Board Member</fullName>
            </value>
            <value>
                <fullName>CARE Staff</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>GIW</fullName>
            </value>
            <value>
                <fullName>Major Donor</fullName>
            </value>
            <value>
                <fullName>Middle Donor</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>Regular Giver</fullName>
            </value>
            <value>
                <fullName>Trust &amp; Foundation</fullName>
            </value>
            <value>
                <fullName>Workplace Giver</fullName>
            </value>
            <value>
                <fullName>Workplace Giving Org</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>