care-australia-uat/force-app/main/default/objects/Donor_Constituency__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Donor Constituencies</relationshipLabel>
    <relationshipName>Donor_Constituencies</relationshipName>
    <type>Lookup</type>
</CustomField>