care-australia-uat/force-app/main/default/objects/Donor_Constituency__c/fields/Donor_Constituency_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Constituency_Name__c</fullName>
    <formula>Text(Constituency_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Constituency Name</label>
    <type>Text</type>
</CustomField>