care-australia-uat/force-app/main/default/objects/Donor_Constituency__c/validationRules/Either_Account_or_Contact_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Either_Account_or_Contact_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( ISBLANK( Contact__c ) , ISBLANK( Account__c ),$Setup.Disable_Validations__c.DisableForAllObjects__c = FALSE,$Setup.Disable_Validations__c.Disable_For_DonorConstituency__c = FALSE)</errorConditionFormula>
    <errorMessage>Either Account or Contact is required</errorMessage>
</ValidationRule>